[package]
name = "pca9956b-cli"
version = "0.1.1"
authors = ["Piers Finlayson <piers@packom.net>"]
license = "GPL-3.0-or-later"
edition = "2018"
repository = "https://github.com/packom/pca9956b-cli"
documentation = "https://github.com/packom/pca9956b-cli"
homepage = "https://github.com/packom/pca9956b-cli"
description = "CLI to control PCA9956B devices"
readme = "README.md"
keywords = ["i2c","bus","openapi","pca9956b","http"]
categories = ["api-bindings","hardware-support","network-programming","embedded","web-programming"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "packom/pca9956b-cli", branch = "master" }

[dependencies]
pca9956b-api = "0.1.2"
tokio-core = "0.1.17"
clap = "2.33"
swagger = "4"
uuid = {version = "0.8", features = ["serde", "v4"]}
hyper = "0.12"
log = "0.4"
env_logger = "0.7"
ncurses = "5.99.0"
signal-hook = "0.1.15"

